updated todo-container appearance for 375px and 576px breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ ul {
 .todo-header .todo-heading {
   text-align: center;
   margin: 10px 0 20px 0;
-  font-size: 2.2em;
+  font-size: 3.1rem;
 }
 .todo-header .todo-header__tools {
   display: block;
@@ -121,10 +121,14 @@ ul {
   justify-content: space-between;
   align-items: center;
   margin: 10px 16px;
-  padding: 22px 10px 6px 16px;
+  padding: 22px 13px 6px 13px;
   background-color: #f9f4ff;
   font-size: 1.8rem;
   font-weight: 300;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+          hyphens: auto;
 }
 .todo-list .todo-list__task .todo-list__task-name {
   margin-bottom: 5px;
@@ -170,10 +174,52 @@ ul {
   .todo-header .todo-header__inputs .todo-header__input {
     width: 75%;
   }
+  .todo-list .todo-list__task {
+    padding: 22px;
+    padding-bottom: 6px;
+  }
+  .todo-list .todo-list__task .task-btn {
+    padding: 12px 37px;
+  }
 }
 @media (min-width: 576px) {
   .todo-container {
     width: 526px;
+  }
+  .todo-header .todo-heading {
+    font-size: 3.5rem;
+  }
+  .todo-header .todo-header__inputs {
+    margin: 0 auto;
+    width: 94%;
+  }
+  .todo-header .todo-header__inputs .todo-header__label {
+    width: 22%;
+    font-size: 1.8rem;
+  }
+  .todo-header .todo-header__inputs .todo-header__input {
+    width: 78%;
+    height: 30px;
+    font-size: 1.7rem;
+  }
+  .todo-header .btn-add {
+    width: 80%;
+  }
+  .todo-list .todo-list__heading {
+    font-size: 2.5rem;
+  }
+  .todo-list .todo-list__task {
+    padding: 28px 32px 10px 32px;
+  }
+  .todo-list .todo-list__task .todo-list__task-name {
+    font-size: 2rem;
+  }
+  .todo-list .todo-list__task .todo-list__task-date {
+    font-size: 1.6rem;
+  }
+  .todo-list .todo-list__task .task-btn {
+    padding: 12px 60px;
+    font-size: 1.9rem;
   }
 }
 @media (min-width: 768px) {
