--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,6 +1,6 @@
 $main-color: #2c005f;
 $secondary-color: #f73262;
-$light: #f9f4ff;
+$light: #f0e8fb;
 $light-violet: #ecddff;
 $light-violet2: #d5cae4;
 $white: #fff;
