--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,8 +61,6 @@ ul {
 		// display: flex;
 		// display: inline-block;
 		display: block;
-		align-items: center;
-		justify-content: space-around;
 	}
 
 	.todo-header__inputs {
@@ -155,6 +153,10 @@ ul {
 		word-wrap: break-word;
 		hyphens: auto;
 
+		.todo-list__task-text {
+			text-align: center;
+		}
+
 		.todo-list__task-name {
 			margin-bottom: 5px;
 			font-size: 1.8rem;
@@ -181,7 +183,7 @@ ul {
 			// background-color: $light-violet;
 
 			&:hover {
-				background-color: $light-violet;
+				background-color: $light-violet2;
 			}
 		}
 
@@ -288,6 +290,61 @@ ul {
 @media (min-width: 768px) {
 	.todo-container {
 		width: 700px;
+	}
+
+	.todo-header {
+		.todo-heading {
+			font-size: 3.8rem;
+			margin-bottom: 26px;
+		}
+
+		.todo-header__tools {
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			margin: 0 auto;
+			width: 92%;
+		}
+
+		.todo-header__inputs {
+			display: flex;
+			flex-direction: column;
+			width: 82%;
+		}
+
+		.btn-add {
+			margin: 0;
+			margin-left: 32px;
+			padding: 18px 0;
+			width: 16%;
+			left: unset;
+			transform: translateX(0);
+			font-size: 1.7rem;
+		}
+	}
+
+	.todo-list {
+		.todo-list__task {
+			flex-direction: row;
+			padding: 0 5px 0 32px;
+
+			.todo-list__task-text {
+				width: 70%;
+			}
+
+			.todo-list__task-date {
+				margin-bottom: 0;
+			}
+
+			.todo-list__task-btns {
+				// width: 30%;
+				width: 0;
+			}
+
+			.task-btn {
+				padding: 40px 20px;
+			}
+		}
 	}
 }
 
