updated todo-container for 992px breakpoint

--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,6 @@ ul {
   }
   .todo-header .todo-heading {
     font-size: 3.8rem;
-    margin-bottom: 26px;
   }
   .todo-header .todo-header__tools {
     display: flex;
@@ -283,6 +282,40 @@ ul {
 @media (min-width: 992px) {
   .todo-container {
     width: 840px;
+  }
+  .todo-header .todo-heading {
+    font-size: 4rem;
+  }
+  .todo-header .todo-header__tools {
+    width: 88%;
+  }
+  .todo-header .todo-header__inputs .todo-header__label {
+    height: 34px;
+    font-size: 2rem;
+  }
+  .todo-header .todo-header__inputs .todo-header__input {
+    height: 34px;
+    font-size: 1.9rem;
+  }
+  .todo-header .btn-add {
+    margin-left: 46px;
+    font-size: 1.8rem;
+  }
+  .todo-list .todo-list__heading {
+    font-size: 2.8rem;
+  }
+  .todo-list .todo-list__task {
+    padding-right: 7px;
+  }
+  .todo-list .todo-list__task .todo-list__task-text {
+    font-size: 2rem;
+  }
+  .todo-list .todo-list__task .todo-list__task-date {
+    font-size: 1.8rem;
+  }
+  .todo-list .todo-list__task .task-btn {
+    padding: 40px 24px;
+    font-size: 2rem;
   }
 }
 @media (min-width: 1200px) {
