--- a/sass/main.scss
+++ b/sass/main.scss
@@ -295,7 +295,6 @@ ul {
 	.todo-header {
 		.todo-heading {
 			font-size: 3.8rem;
-			margin-bottom: 26px;
 		}
 
 		.todo-header__tools {
@@ -351,7 +350,6 @@ ul {
 			}
 
 			.todo-list__task-btns {
-				// width: 30%;
 				width: 0;
 			}
 
@@ -365,6 +363,58 @@ ul {
 @media (min-width: 992px) {
 	.todo-container {
 		width: 840px;
+	}
+
+	.todo-header {
+		.todo-heading {
+			font-size: 4rem;
+			// margin-bottom: 28px;
+		}
+
+		.todo-header__tools {
+			width: 88%;
+		}
+
+		.todo-header__inputs {
+			.todo-header__label {
+				height: 34px;
+				font-size: 2rem;
+			}
+
+			.todo-header__input {
+				height: 34px;
+				font-size: 1.9rem;
+			}
+		}
+
+		.btn-add {
+			margin-left: 46px;
+			font-size: 1.8rem;
+		}
+	}
+
+	.todo-list {
+		.todo-list__heading {
+			font-size: 2.8rem;
+		}
+
+		.todo-list__task {
+			padding-right: 7px;
+
+			.todo-list__task-text {
+				// width: 70%;
+				font-size: 2rem;
+			}
+
+			.todo-list__task-date {
+				font-size: 1.8rem;
+			}
+
+			.task-btn {
+				padding: 40px 24px;
+				font-size: 2rem;
+			}
+		}
 	}
 }
 
