--- a/sass/main.scss
+++ b/sass/main.scss
@@ -368,7 +368,6 @@ ul {
 	.todo-header {
 		.todo-heading {
 			font-size: 4rem;
-			// margin-bottom: 28px;
 		}
 
 		.todo-header__tools {
@@ -401,8 +400,7 @@ ul {
 		.todo-list__task {
 			padding-right: 7px;
 
-			.todo-list__task-text {
-				// width: 70%;
+			.todo-list__task-name {
 				font-size: 2rem;
 			}
 
@@ -421,5 +419,54 @@ ul {
 @media (min-width: 1200px) {
 	.todo-container {
 		width: 1000px;
+	}
+
+	.todo-header {
+		.todo-heading {
+			font-size: 4.4rem;
+			margin: 15px 0 24px 0;
+		}
+
+		.todo-header__tools {
+			width: 87%;
+		}
+
+		.todo-header__inputs {
+			.todo-header__label {
+				height: 36px;
+				font-size: 2.2rem;
+			}
+
+			.todo-header__input {
+				height: 36px;
+				font-size: 2.1rem;
+			}
+		}
+
+		.btn-add {
+			margin-left: 48px;
+			font-size: 1.9rem;
+		}
+	}
+
+	.todo-list {
+		.todo-list__heading {
+			font-size: 3rem;
+		}
+
+		.todo-list__task {
+			.todo-list__task-name {
+				font-size: 2.2rem;
+			}
+
+			.todo-list__task-date {
+				font-size: 1.9rem;
+			}
+
+			.task-btn {
+				padding: 40px 26px;
+				font-size: 2.1rem;
+			}
+		}
 	}
 }
