--- a/sass/main.scss
+++ b/sass/main.scss
@@ -137,6 +137,13 @@ ul {
 		*/
 	}
 
+	.error-info {
+		margin: 5px 0 20px 0;
+		text-align: center;
+		font-size: 1.8rem;
+		color: $red;
+	}
+
 	.todo-list__task {
 		display: flex;
 		flex-direction: column;
@@ -221,6 +228,10 @@ ul {
 	}
 
 	.todo-list {
+		.error-info {
+			font-size: 1.9rem;
+		}
+
 		.todo-list__task {
 			padding: 22px;
 			padding-bottom: 6px;
@@ -266,6 +277,10 @@ ul {
 	.todo-list {
 		.todo-list__heading {
 			font-size: 2.5rem;
+		}
+
+		.error-info {
+			font-size: 2rem;
 		}
 
 		.todo-list__task {
@@ -337,6 +352,10 @@ ul {
 			font-size: 2.7rem;
 		}
 
+		.error-info {
+			font-size: 2.1rem;
+		}
+
 		.todo-list__task {
 			flex-direction: row;
 			padding: 0 5px 0 32px;
@@ -397,6 +416,10 @@ ul {
 			font-size: 2.8rem;
 		}
 
+		.error-info {
+			font-size: 2.2rem;
+		}
+
 		.todo-list__task {
 			padding-right: 7px;
 
@@ -452,6 +475,11 @@ ul {
 	.todo-list {
 		.todo-list__heading {
 			font-size: 3rem;
+		}
+
+		.error-info {
+			margin: 8px 0 22px 0;
+			font-size: 2.3rem;
 		}
 
 		.todo-list__task {
