--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul {
   padding: 20px;
   background: rgb(44, 0, 95);
   background: linear-gradient(0deg, rgb(233, 68, 110) 0%, rgb(44, 0, 95) 100%);
-  color: white;
+  color: #fff;
 }
 .todo-header .todo-heading {
   text-align: center;
@@ -169,6 +169,72 @@ ul {
 }
 .todo-list .todo-list__task .btn-delete {
   color: #ec2154;
+}
+
+.edit-task-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 50px;
+  background: rgb(44, 0, 95);
+  background: linear-gradient(0deg, rgb(233, 68, 110) 0%, rgb(44, 0, 95) 100%);
+  color: #fff;
+  transition: transform 0.3s;
+  z-index: 10;
+}
+.edit-task-mobile .edit-task-mobile--active {
+  transform: translateX(0);
+}
+.edit-task-mobile .edit-task-mobile__header {
+  margin-bottom: 20px;
+  font-size: 3.1rem;
+}
+.edit-task-mobile span {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.edit-task-mobile .edit-task-mobile__inputs {
+  width: 76%;
+}
+.edit-task-mobile .edit-task-mobile__label {
+  width: 20%;
+  font-size: 1.6rem;
+}
+.edit-task-mobile .edit-task-mobile__input {
+  width: 80%;
+  height: 28px;
+  margin: 10px 0;
+  padding: 1px 10px;
+  text-align: center;
+  border: none;
+  border-radius: 6px;
+  background-color: #f0e8fb;
+  font-family: inherit;
+  font-size: 1.5rem;
+}
+.edit-task-mobile .edit-task-mobile__btns {
+  margin-top: 15px;
+}
+.edit-task-mobile .edit-task__btn {
+  margin: 0 8px;
+  padding: 10px 30px;
+  border-radius: 6px;
+  text-transform: uppercase;
+  background-color: #f0e8fb;
+  color: #2c005f;
+  transition: background-color 0.3s, color 0.3s;
+}
+.edit-task-mobile .edit-task__btn:hover {
+  background-color: #2c005f;
+  color: #ecddff;
 }
 
 @media (min-width: 375px) {
