--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@ ul {
 		rgb(233, 68, 110) 0%,
 		rgba(44, 0, 95, 1) 100%
 	);
-	color: white;
+	color: $white;
 
 	.todo-heading {
 		text-align: center;
@@ -105,7 +105,6 @@ ul {
 		text-transform: uppercase;
 		background-color: $light;
 		color: $main-color;
-
 		transition: background-color 0.3s, color 0.3s;
 
 		&:hover {
@@ -204,6 +203,89 @@ ul {
 
 		.btn-delete {
 			color: $red;
+		}
+	}
+}
+
+// EDIT TASK MOBILE
+.edit-task-mobile {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding-bottom: 50px;
+	background: rgb(44, 0, 95);
+	background: linear-gradient(
+		0deg,
+		rgb(233, 68, 110) 0%,
+		rgba(44, 0, 95, 1) 100%
+	);
+	color: $white;
+	// visibility: hidden;
+	// transform: translateX(-102%);
+	transition: transform 0.3s;
+	z-index: 10;
+
+	.edit-task-mobile--active {
+		transform: translateX(0);
+	}
+
+	.edit-task-mobile__header {
+		margin-bottom: 20px;
+		font-size: 3.1rem;
+		// text-transform: uppercase;
+	}
+
+	span {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-bottom: 10px;
+	}
+
+	.edit-task-mobile__inputs {
+		width: 76%;
+	}
+
+	.edit-task-mobile__label {
+		width: 20%;
+		font-size: 1.6rem;
+	}
+
+	.edit-task-mobile__input {
+		width: 80%;
+		height: 28px;
+		margin: 10px 0;
+		padding: 1px 10px;
+		text-align: center;
+		border: none;
+		border-radius: 6px;
+		background-color: $light;
+		font-family: inherit;
+		font-size: 1.5rem;
+	}
+
+	.edit-task-mobile__btns {
+		margin-top: 15px;
+	}
+
+	.edit-task__btn {
+		margin: 0 8px;
+		padding: 10px 30px;
+		border-radius: 6px;
+		text-transform: uppercase;
+		background-color: $light;
+		color: $main-color;
+		transition: background-color 0.3s, color 0.3s;
+
+		&:hover {
+			background-color: $main-color;
+			color: $light-violet;
 		}
 	}
 }
