--- a/css/main.css
+++ b/css/main.css
@@ -393,10 +393,10 @@ ul {
     padding-right: 7px;
   }
   .todo-list .todo-list__task .todo-list__task-name {
-    font-size: 2rem;
+    font-size: 2.1rem;
   }
   .todo-list .todo-list__task .todo-list__task-date {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
   }
   .todo-list .todo-list__task .task-btn {
     padding: 40px 24px;
@@ -407,6 +407,21 @@ ul {
   .todo-container {
     width: 1000px;
   }
+  .todo-header {
+    /*
+    .todo-header__inputs {
+    	.todo-header__label {
+    		height: 36px;
+    		font-size: 2.1rem;
+    	}
+
+    	.todo-header__input {
+    		height: 36px;
+    		font-size: 2rem;
+    	}
+    }
+    */
+  }
   .todo-header .todo-heading {
     font-size: 4.4rem;
     margin: 15px 0 24px 0;
@@ -414,17 +429,8 @@ ul {
   .todo-header .todo-header__tools {
     width: 87%;
   }
-  .todo-header .todo-header__inputs .todo-header__label {
-    height: 36px;
-    font-size: 2.2rem;
-  }
-  .todo-header .todo-header__inputs .todo-header__input {
-    height: 36px;
-    font-size: 2.1rem;
-  }
   .todo-header .btn-add {
     margin-left: 48px;
-    font-size: 1.9rem;
   }
   .todo-list .todo-list__heading {
     font-size: 3rem;
@@ -432,15 +438,5 @@ ul {
   .todo-list .error-info {
     margin: 8px 0 22px 0;
     font-size: 2.3rem;
-  }
-  .todo-list .todo-list__task .todo-list__task-name {
-    font-size: 2.2rem;
-  }
-  .todo-list .todo-list__task .todo-list__task-date {
-    font-size: 1.9rem;
-  }
-  .todo-list .todo-list__task .task-btn {
-    padding: 40px 26px;
-    font-size: 2.1rem;
   }
 }/*# sourceMappingURL=main.css.map */
