--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,569 +1,4 @@
-@use "colors" as *;
-
-*::after,
-*::before,
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-html {
-	font-size: 62.5%;
-}
-
-body {
-	display: flex;
-	justify-content: center;
-	margin: 20px 0 20px 0;
-	font-family: "Oswald", sans-serif;
-	font-size: 1.6rem;
-	background-color: $white2;
-}
-
-ul {
-	list-style-type: none;
-}
-
-.btn {
-	border: none;
-	background-color: transparent;
-	font-family: inherit;
-	font-size: 1.6rem;
-}
-
-// To Do List - CONTAINER
-.todo-container {
-	width: 300px;
-	border-radius: 6px;
-	overflow: hidden;
-	background-color: $white;
-	box-shadow: 3px 3px 6px $light-violet2;
-}
-
-.todo-header {
-	padding: 20px;
-	background: rgb(44, 0, 95);
-	background: linear-gradient(
-		0deg,
-		rgb(233, 68, 110) 0%,
-		rgba(44, 0, 95, 1) 100%
-	);
-	color: $white;
-
-	.todo-heading {
-		text-align: center;
-		margin: 10px 0 20px 0;
-		font-size: 3.1rem;
-	}
-
-	.todo-header__tools {
-		// display: flex;
-		// display: inline-block;
-		display: block;
-	}
-
-	.todo-header__inputs {
-		// display: flex;
-		// flex-direction: column;
-		width: 100%;
-
-		span {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			margin-bottom: 10px;
-		}
-
-		.todo-header__label {
-			width: 20%;
-			font-size: 1.6rem;
-		}
-
-		.todo-header__input {
-			width: 80%;
-			height: 28px;
-			margin: 10px 0;
-			padding: 1px 10px;
-			text-align: center;
-			border: none;
-			border-radius: 6px;
-			background-color: $light;
-			font-family: inherit;
-			font-size: 1.5rem;
-		}
-	}
-
-	.btn-add {
-		position: relative;
-		left: 50%;
-		transform: translateX(-50%);
-		margin-top: 20px;
-		padding: 5px;
-		width: 94%;
-		border-radius: 6px;
-		text-transform: uppercase;
-		background-color: $light;
-		color: $main-color;
-		transition: background-color 0.3s, color 0.3s;
-
-		&:hover {
-			background-color: $main-color;
-			color: $light-violet;
-		}
-	}
-}
-
-// To Do List - LIST
-.todo-list {
-	padding-bottom: 10px;
-
-	.todo-list__heading {
-		text-align: center;
-		padding: 20px 0 12px 0;
-		color: $main-color;
-		font-size: 2.3rem;
-		letter-spacing: 0.08rem;
-
-		//Background Gradient
-		/*
-		background: rgb(247, 50, 98);
-		background: linear-gradient(
-			180deg,
-			rgb(233, 68, 110) 0%,
-			rgba(255, 255, 255, 1) 100%
-		);
-		*/
-	}
-
-	.error-info {
-		margin: 5px 0 20px 0;
-		text-align: center;
-		font-size: 1.8rem;
-		color: $red;
-	}
-
-	.todo-list__task {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: center;
-		margin: 10px 16px;
-		// padding: 22px 10px 6px 16px;
-		padding: 22px 13px 6px 13px;
-		background-color: $light;
-		font-size: 1.8rem;
-		font-weight: 300;
-		// wordwrap
-		overflow-wrap: break-word;
-		word-wrap: break-word;
-		hyphens: auto;
-
-		.todo-list__task-text {
-			text-align: center;
-		}
-
-		.todo-list__task-name {
-			margin-bottom: 5px;
-			font-size: 1.8rem;
-			text-align: center;
-		}
-
-		.todo-list__task-date {
-			margin-bottom: 12px;
-			font-size: 1.5rem;
-			font-weight: 400;
-		}
-
-		.task-btns {
-			display: inline-block;
-			height: 100%;
-			font-size: 0;
-		}
-
-		.task-btn {
-			padding: 12px 29px;
-			font-size: 1.7rem;
-			font-weight: 400;
-			transition: background-color 0.3s;
-			// background-color: $light-violet;
-
-			&:hover {
-				background-color: $light-violet2;
-			}
-		}
-
-		.btn-check {
-			color: $violet;
-		}
-
-		.btn-edit {
-			color: $green;
-		}
-
-		.btn-delete {
-			color: $red;
-		}
-	}
-}
-
-// EDIT TASK MOBILE
-.edit-task-mobile {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	padding-bottom: 50px;
-	background: rgb(44, 0, 95);
-	background: linear-gradient(
-		0deg,
-		rgb(233, 68, 110) 0%,
-		rgba(44, 0, 95, 1) 100%
-	);
-	color: $white;
-	// visibility: hidden;
-	transform: translateX(-102%);
-	transition: transform 0.3s;
-	z-index: 10;
-
-	.edit-task-mobile--active {
-		transform: translateX(0);
-	}
-
-	.edit-task-mobile__header {
-		margin-bottom: 20px;
-		font-size: 3.1rem;
-		// text-transform: uppercase;
-	}
-
-	span {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: 10px;
-	}
-
-	.edit-task-mobile__inputs {
-		width: 76%;
-	}
-
-	.edit-task-mobile__label {
-		width: 20%;
-		font-size: 1.6rem;
-	}
-
-	.edit-task-mobile__input {
-		width: 80%;
-		height: 28px;
-		margin: 10px 0;
-		padding: 1px 10px;
-		text-align: center;
-		border: none;
-		border-radius: 6px;
-		background-color: $light;
-		font-family: inherit;
-		font-size: 1.5rem;
-	}
-
-	.edit-task-mobile__btns {
-		margin-top: 15px;
-	}
-
-	.edit-task__btn {
-		margin: 0 8px;
-		padding: 10px 30px;
-		border-radius: 6px;
-		text-transform: uppercase;
-		background-color: $light;
-		color: $main-color;
-		transition: background-color 0.3s, color 0.3s;
-
-		&:hover {
-			background-color: $main-color;
-			color: $light-violet;
-		}
-	}
-}
-
-// BREAKPOINTS
-
-@media (min-width: 375px) {
-	.todo-container {
-		width: 355px;
-	}
-
-	.todo-header {
-		.todo-header__inputs {
-			.todo-header__label {
-				width: 25%;
-			}
-
-			.todo-header__input {
-				width: 75%;
-			}
-		}
-	}
-
-	.todo-list {
-		.error-info {
-			font-size: 1.9rem;
-		}
-
-		.todo-list__task {
-			padding: 22px;
-			padding-bottom: 6px;
-
-			.task-btn {
-				padding: 12px 37px;
-			}
-		}
-	}
-}
-
-@media (min-width: 576px) {
-	.todo-container {
-		width: 526px;
-	}
-
-	.todo-header {
-		.todo-heading {
-			font-size: 3.5rem;
-		}
-
-		.todo-header__inputs {
-			margin: 0 auto;
-			width: 94%;
-
-			.todo-header__label {
-				width: 22%;
-				font-size: 1.8rem;
-			}
-
-			.todo-header__input {
-				width: 78%;
-				height: 30px;
-				font-size: 1.7rem;
-			}
-		}
-
-		.btn-add {
-			width: 80%;
-		}
-	}
-
-	.todo-list {
-		.todo-list__heading {
-			font-size: 2.5rem;
-		}
-
-		.error-info {
-			font-size: 2rem;
-		}
-
-		.todo-list__task {
-			padding: 28px 32px 10px 32px;
-
-			.todo-list__task-name {
-				font-size: 2rem;
-			}
-
-			.todo-list__task-date {
-				font-size: 1.7rem;
-			}
-
-			.task-btn {
-				padding: 12px 60px;
-				font-size: 1.9rem;
-			}
-		}
-	}
-}
-
-@media (min-width: 768px) {
-	.todo-container {
-		width: 700px;
-	}
-
-	.todo-header {
-		.todo-heading {
-			font-size: 3.8rem;
-		}
-
-		.todo-header__tools {
-			display: flex;
-			align-items: center;
-			justify-content: space-around;
-			margin: 0 auto;
-			width: 92%;
-		}
-
-		.todo-header__inputs {
-			display: flex;
-			flex-direction: column;
-			width: 82%;
-
-			.todo-header__label {
-				height: 32px;
-				font-size: 1.9rem;
-			}
-
-			.todo-header__input {
-				height: 32px;
-				font-size: 1.8rem;
-			}
-		}
-
-		.btn-add {
-			margin: 0;
-			margin-left: 32px;
-			padding: 18px 0;
-			width: 16%;
-			left: unset;
-			transform: translateX(0);
-			font-size: 1.7rem;
-		}
-	}
-
-	.todo-list {
-		.todo-list__heading {
-			font-size: 2.7rem;
-		}
-
-		.error-info {
-			font-size: 2.1rem;
-		}
-
-		.todo-list__task {
-			flex-direction: row;
-			padding: 0 5px 0 32px;
-
-			.todo-list__task-text {
-				width: 70%;
-			}
-
-			.todo-list__task-date {
-				margin-bottom: 0;
-			}
-
-			.todo-list__task-btns {
-				width: 0;
-			}
-
-			.task-btn {
-				padding: 40px 20px;
-			}
-		}
-	}
-}
-
-@media (min-width: 992px) {
-	.todo-container {
-		width: 840px;
-	}
-
-	.todo-header {
-		.todo-heading {
-			font-size: 4rem;
-		}
-
-		.todo-header__tools {
-			width: 88%;
-		}
-
-		.todo-header__inputs {
-			.todo-header__label {
-				height: 34px;
-				font-size: 2rem;
-			}
-
-			.todo-header__input {
-				height: 34px;
-				font-size: 1.9rem;
-			}
-		}
-
-		.btn-add {
-			margin-left: 46px;
-			font-size: 1.8rem;
-		}
-	}
-
-	.todo-list {
-		.todo-list__heading {
-			font-size: 2.8rem;
-		}
-
-		.error-info {
-			font-size: 2.2rem;
-		}
-
-		.todo-list__task {
-			padding-right: 7px;
-
-			.todo-list__task-name {
-				font-size: 2.1rem;
-			}
-
-			.todo-list__task-date {
-				font-size: 1.9rem;
-			}
-
-			.task-btn {
-				padding: 40px 24px;
-				font-size: 2rem;
-			}
-		}
-	}
-}
-
-@media (min-width: 1200px) {
-	.todo-container {
-		width: 1000px;
-	}
-
-	.todo-header {
-		.todo-heading {
-			font-size: 4.4rem;
-			margin: 15px 0 24px 0;
-		}
-
-		.todo-header__tools {
-			width: 87%;
-		}
-
-		/*
-		.todo-header__inputs {
-			.todo-header__label {
-				height: 36px;
-				font-size: 2.1rem;
-			}
-
-			.todo-header__input {
-				height: 36px;
-				font-size: 2rem;
-			}
-		}
-		*/
-
-		.btn-add {
-			margin-left: 48px;
-			// font-size: 1.9rem;
-		}
-	}
-
-	.todo-list {
-		.todo-list__heading {
-			font-size: 3rem;
-		}
-
-		.error-info {
-			margin: 8px 0 22px 0;
-			font-size: 2.3rem;
-		}
-	}
-}
+// main styles for HTMl document
+@use "./basic";
+// breakpoints' styles
+@use "./breakpoints";
