--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -227,7 +227,7 @@ ul {
 	);
 	color: $white;
 	// visibility: hidden;
-	transform: translateX(-102%);
+	// transform: translateX(-102%);
 	transition: transform 0.3s;
 	z-index: 10;
 
