--- a/sass/breakpoints/_breakpt375.scss
+++ b/sass/breakpoints/_breakpt375.scss
@@ -29,4 +29,28 @@
 			}
 		}
 	}
+
+	.edit-task-mobile {
+		.edit-task-mobile__header {
+			font-size: 3.4rem;
+		}
+
+		.edit-task-mobile__label {
+			font-size: 1.7rem;
+		}
+
+		.edit-task-mobile__input {
+			height: 30px;
+			font-size: 1.6rem;
+		}
+
+		.edit-task-mobile__btns {
+			margin-top: 16px;
+		}
+
+		.edit-task__btn {
+			margin: 0 10px;
+			padding: 10px 32px;
+		}
+	}
 }
