--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,7 @@ ul {
     font-size: 3.4rem;
   }
   .edit-task-mobile .edit-task-mobile__label {
+    margin-right: 12px;
     font-size: 1.7rem;
   }
   .edit-task-mobile .edit-task-mobile__input {
@@ -271,7 +272,7 @@ ul {
     margin-top: 16px;
   }
   .edit-task-mobile .edit-task__btn {
-    margin: 0 10px;
+    margin: 0 12px;
     padding: 10px 32px;
   }
 }
@@ -316,6 +317,25 @@ ul {
   .todo-list .todo-list__task .task-btn {
     padding: 12px 60px;
     font-size: 1.9rem;
+  }
+  .edit-task-mobile .edit-task-mobile__header {
+    font-size: 3.9rem;
+  }
+  .edit-task-mobile .edit-task-mobile__label {
+    margin-right: 16px;
+    font-size: 1.9rem;
+  }
+  .edit-task-mobile .edit-task-mobile__input {
+    height: 32px;
+    font-size: 1.7rem;
+  }
+  .edit-task-mobile .edit-task-mobile__btns {
+    margin-top: 22px;
+  }
+  .edit-task-mobile .edit-task__btn {
+    margin: 0 18px;
+    padding: 14px 42px;
+    font-size: 1.7rem;
   }
 }
 @media (min-width: 768px) {
