--- a/sass/breakpoints/_breakpt375.scss
+++ b/sass/breakpoints/_breakpt375.scss
@@ -36,6 +36,7 @@
 		}
 
 		.edit-task-mobile__label {
+			margin-right: 12px;
 			font-size: 1.7rem;
 		}
 
@@ -49,7 +50,7 @@
 		}
 
 		.edit-task__btn {
-			margin: 0 10px;
+			margin: 0 12px;
 			padding: 10px 32px;
 		}
 	}
