updated edit-task-desktop styles for 992px breakpoint

--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,7 @@ ul {
     border-radius: 6px;
     text-transform: uppercase;
     background-color: #f0e8fb;
-    color: #2c005f;
+    color: #1d003d;
     transition: background-color 0.3s, color 0.3s;
   }
   .edit-task-desktop .edit-task__btn:hover {
@@ -510,6 +510,31 @@ ul {
   .todo-list .todo-list__task .task-btn {
     padding: 40px 24px;
     font-size: 2rem;
+  }
+  .edit-task-desktop {
+    width: 840px;
+  }
+  .edit-task-desktop .edit-task-desktop__header {
+    margin: 21px 0;
+    font-size: 3.6rem;
+  }
+  .edit-task-desktop .edit-task-desktop__inputs {
+    width: 91%;
+  }
+  .edit-task-desktop .edit-task-desktop__label {
+    font-size: 2rem;
+    margin-right: 20px;
+  }
+  .edit-task-desktop .edit-task-desktop__input {
+    width: 230px;
+    height: 29px;
+    font-size: 1.8rem;
+  }
+  .edit-task-desktop .edit-task__btn {
+    margin: 24px;
+    margin-top: 8px;
+    padding: 7px 90px;
+    font-size: 1.7rem;
   }
 }
 @media (min-width: 1200px) {
