--- a/sass/breakpoints/_breakpt768.scss
+++ b/sass/breakpoints/_breakpt768.scss
@@ -144,7 +144,7 @@
 			border-radius: 6px;
 			text-transform: uppercase;
 			background-color: $light;
-			color: $main-color;
+			color: $main-c-dark;
 			transition: background-color 0.3s, color 0.3s;
 
 			&:hover {
