--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ ul {
   transition: transform 0.3s;
   z-index: 10;
 }
-.edit-task-mobile .edit-task-mobile--active {
+.edit-task-mobile--active {
   transform: translateX(0);
 }
 .edit-task-mobile .edit-task-mobile__header {
