--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -137,7 +137,8 @@ ul {
 	}
 
 	.error-info {
-		margin: 5px 0 20px 0;
+		margin: 5px auto 20px;
+		max-width: 172px;
 		text-align: center;
 		font-size: 1.8rem;
 		color: $red;
@@ -248,7 +249,7 @@ ul {
 	span {
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: center;
 		margin-bottom: 10px;
 	}
 
@@ -274,8 +275,17 @@ ul {
 		font-size: 1.5rem;
 	}
 
+	.edit-task__info {
+		margin-top: 10px;
+		width: 80%;
+		max-width: 215px;
+		text-align: center;
+		text-transform: uppercase;
+		font-size: 1.7rem;
+	}
+
 	.edit-task-mobile__btns {
-		margin-top: 15px;
+		margin-top: 10px;
 	}
 
 	.edit-task__btn {
