--- a/sass/breakpoints/_breakpt375.scss
+++ b/sass/breakpoints/_breakpt375.scss
@@ -19,6 +19,8 @@
 
 	.todo-list {
 		.error-info {
+			margin: 5px auto 20px;
+			max-width: 200px;
 			font-size: 1.9rem;
 		}
 
@@ -45,6 +47,11 @@
 		.edit-task-mobile__input {
 			height: 30px;
 			font-size: 1.6rem;
+		}
+
+		.edit-task__info {
+			max-width: 230px;
+			font-size: 1.8rem;
 		}
 
 		.edit-task-mobile__btns {
