added edit-task__info p in HTML and CCS styles for desktop devices

--- a/sass/breakpoints/_breakpt1200.scss
+++ b/sass/breakpoints/_breakpt1200.scss
@@ -57,6 +57,11 @@
 			font-size: 1.9rem;
 		}
 
+		.edit-task__info {
+			margin-top: 10px;
+			font-size: 2.2rem;
+		}
+
 		.edit-task__btn {
 			margin: 30px;
 			margin-top: 10px;
