--- a/css/main.css
+++ b/css/main.css
@@ -448,8 +448,8 @@ ul {
     color: #fff;
     z-index: 10;
   }
-  .edit-task-desktop .edit-task-desktop--active {
-    transform: translateY(0);
+  .edit-task-desktop--active {
+    transform: translateX(-50%) translateY(0);
   }
   .edit-task-desktop .edit-task-desktop__header {
     margin: 20px 0;
@@ -482,8 +482,13 @@ ul {
     font-size: 1.7rem;
     text-align: center;
   }
+  .edit-task-desktop .edit-task__info {
+    margin-top: 8px;
+    text-transform: uppercase;
+    font-size: 2rem;
+  }
   .edit-task-desktop .edit-task-desktop__btns {
-    margin-top: 15px;
+    margin-top: 10px;
   }
   .edit-task-desktop .edit-task__btn {
     margin: 20px;
@@ -561,6 +566,9 @@ ul {
     height: 29px;
     font-size: 1.8rem;
   }
+  .edit-task-desktop .edit-task__info {
+    font-size: 2.1rem;
+  }
   .edit-task-desktop .edit-task__btn {
     margin: 24px;
     margin-top: 8px;
@@ -608,6 +616,10 @@ ul {
     width: 260px;
     height: 32px;
     font-size: 1.9rem;
+  }
+  .edit-task-desktop .edit-task__info {
+    margin-top: 10px;
+    font-size: 2.2rem;
   }
   .edit-task-desktop .edit-task__btn {
     margin: 30px;
