--- a/sass/breakpoints/_breakpt768.scss
+++ b/sass/breakpoints/_breakpt768.scss
@@ -98,8 +98,8 @@
 		color: $white;
 		z-index: 10;
 
-		.edit-task-desktop--active {
-			transform: translateY(0);
+		&--active {
+			transform: translateX(-50%) translateY(0);
 		}
 
 		.edit-task-desktop__header {
@@ -138,8 +138,14 @@
 			text-align: center;
 		}
 
+		.edit-task__info {
+			margin-top: 8px;
+			text-transform: uppercase;
+			font-size: 2rem;
+		}
+
 		.edit-task-desktop__btns {
-			margin-top: 15px;
+			margin-top: 10px;
 		}
 
 		.edit-task__btn {
