--- a/sass/breakpoints/_breakpt992.scss
+++ b/sass/breakpoints/_breakpt992.scss
@@ -83,6 +83,10 @@
 			font-size: 1.8rem;
 		}
 
+		.edit-task__info {
+			font-size: 2.1rem;
+		}
+
 		.edit-task__btn {
 			margin: 24px;
 			margin-top: 8px;
