--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,7 @@ ul {
     background-color: #2c005f;
     background: linear-gradient(0deg, #be234a 0%, #1d003d 100%);
     box-shadow: 0px 0px 3px #2c005f;
+    transition: transform 0.3s;
     color: #fff;
     z-index: 10;
   }
