--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -3,6 +3,7 @@ $secondary-color: #f73262;
 $light: #f0e8fb;
 $light-violet: #ecddff;
 $light-violet2: #d5cae4;
+$light-violet3: #8f6fbd;
 $white: #fff;
 $white2: #f5f5f5;
 $green: #0fb345;
