--- a/sass/breakpoints/_breakpt576.scss
+++ b/sass/breakpoints/_breakpt576.scss
@@ -41,6 +41,10 @@
 			font-size: 2rem;
 		}
 
+		.todo-list__task-time-heading {
+			font-size: 1.8rem;
+		}
+
 		.todo-list__task {
 			padding: 28px 32px 10px 32px;
 
