--- a/sass/breakpoints/_breakpt992.scss
+++ b/sass/breakpoints/_breakpt992.scss
@@ -41,6 +41,10 @@
 			font-size: 2.2rem;
 		}
 
+		.todo-list__task-time-heading {
+			font-size: 2rem;
+		}
+
 		.todo-list__task {
 			padding-right: 7px;
 
