--- a/sass/breakpoints/_breakpt1200.scss
+++ b/sass/breakpoints/_breakpt1200.scss
@@ -35,6 +35,10 @@
 			margin: 8px 0 22px 0;
 			font-size: 2.3rem;
 		}
+
+		.todo-list__task-time-heading {
+			font-size: 2.1rem;
+		}
 	}
 
 	.edit-task-desktop {
