--- a/sass/breakpoints/_breakpt375.scss
+++ b/sass/breakpoints/_breakpt375.scss
@@ -19,9 +19,12 @@
 
 	.todo-list {
 		.error-info {
-			margin: 5px auto 20px;
 			max-width: 200px;
 			font-size: 1.9rem;
+		}
+
+		.todo-list__task-time-heading {
+			font-size: 1.7rem;
 		}
 
 		.todo-list__task {
