--- a/sass/breakpoints/_breakpt768.scss
+++ b/sass/breakpoints/_breakpt768.scss
@@ -54,6 +54,10 @@
 			font-size: 2.1rem;
 		}
 
+		.todo-list__task-time-heading {
+			font-size: 1.9rem;
+		}
+
 		.todo-list__task {
 			flex-direction: row;
 			padding: 0 5px 0 32px;
